--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
-  --foreground: #0F172A;
+  --foreground: #0f172a;
 }
 
 @theme inline {
@@ -13,7 +13,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
-    --foreground: #0F172A;
+    --foreground: #0f172a;
   }
 }
 
