--- a/app/globals.css
+++ b/app/globals.css
@@ -42,9 +42,9 @@
 }
 
 @layer utilities {
-  .font-heading-4 {
+  /* .font-heading-4 {
     @apply mb-[5px] text-[2.5rem] leading-[110.00000000000001%] font-bold;
-  }
+  } */
   .font-body-m {
     @apply leading-[150%];
   }
@@ -80,4 +80,17 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h4 {
+  font-size: 2.5rem;
+  line-height: 110%;
+  font-weight: bold;
+}
+
+h6 {
+  margin-bottom: 5px;
+  font-size: 1.5rem;
+  line-height: 110%;
+  font-weight: bold;
 }
