--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,8 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Roboto, sans-serif;
 }
 
 h4 {
