--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,12 @@ h4 {
   font-weight: bold;
 }
 
+h5 {
+  font-size: 2rem;
+  line-height: 110%;
+  font-weight: bold;
+}
+
 h6 {
   margin-bottom: 5px;
   font-size: 1.5rem;
