--- a/app/globals.css
+++ b/app/globals.css
@@ -105,6 +105,12 @@ h6 {
     font-weight: 800;
   }
 
+  h5 {
+    font-size: 3.5rem;
+    font-weight: 800;
+    margin-bottom: 5px;
+  }
+
   h6 {
     font-size: 3.5rem;
     font-weight: 800;
